broken links solved and contrast issues solved

--- a/public/assets-new/assets/css/base-responsive.css
+++ b/public/assets-new/assets/css/base-responsive.css
@@ -526,7 +526,7 @@
 }
 .logo img {
     width: 100%;
-    padding: 10px 0px 10px 0px;
+    /* padding: 10px 0px 10px 0px; */
 }
 @media all and (max-width: 767px) {
     .logo img {
