--- a/public/assets-new/theme/css/site.css
+++ b/public/assets-new/theme/css/site.css
@@ -138,6 +138,7 @@ ul#nav li a i.fa-home {
 	text-decoration: none;
 }
 .gallery-area a span{
+	font-size: 16px;
 	color:#000;
 }
 .gallery-heading a.bttn-more.bttn-view {
